src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBMultiBind_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBMultiBind_StringErrorContext.class */
public final class ARBMultiBind_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglBindBuffersBase(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindBuffersBase(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("nglBindBuffersRange(IIIJJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindBuffersRange(IILjava/nio/IntBuffer;Lorg/lwjgl/PointerBuffer;Lorg/lwjgl/PointerBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("nglBindTextures(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindTextures(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("nglBindSamplers(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindSamplers(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("nglBindImageTextures(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindImageTextures(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("nglBindVertexBuffers(IIJJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindVertexBuffers(ILjava/nio/IntBuffer;Lorg/lwjgl/PointerBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindBuffersBase(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindBuffersRange(II[ILorg/lwjgl/PointerBuffer;Lorg/lwjgl/PointerBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindTextures(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindSamplers(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindImageTextures(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        methods.put("glBindVertexBuffers(I[ILorg/lwjgl/PointerBuffer;[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiBindErrorContext");
        return methods;
    }
}
